class names update

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
   
   <title>Frontend Mentor | Clipboard landing page</title>
 
+  <!-- CSS -->
+
   <link rel="stylesheet" href="styles.css">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font Awesome -->
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <main class="main-page">
+  <main class="page main-page">
 
-    <section class="about-sec">
+    <section class="page__about about-sec">
       <div class="bg"></div>
       <img src="images/logo.svg" alt="website logo image" class="page-logo">
       <header>
@@ -30,14 +33,14 @@
       </header>
     </section>
 
-    <section class="additional-info-sec">
+    <section class="page__info additional-info-sec">
       <header>
         <h1>Keep track of your snippets</h1>
         <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </header>
     </section>
 
-    <section class="benefits-sec">
+    <section class="page__benefits benefits-sec">
       <div>
         <img src="images/image-computer.png" alt="computer image">
       </div>
@@ -57,7 +60,7 @@
       </div>
     </section>
 
-    <section class="accessibility-sec">
+    <section class="page__accessibility accessibility-sec">
       <header>
         <h1>Access Clipboard Anywhere</h1>
         <p>Whether you're on the go or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
@@ -65,7 +68,7 @@
       <img src="images/image-devices.png" alt="devices image">
     </section>
 
-    <section class="workflow-sec">
+    <section class="page__workflow workflow-sec">
       <header>
         <h1>Supercharge your workflow</h1>
         <p>We've got the tools to boost your productivity.</p>
@@ -89,7 +92,7 @@
       </div>
     </section>
 
-    <section class="logos-sec">
+    <section class="page__companies logos-sec">
       <img src="images/logo-google.png" alt="logo image of google" class="company-logo">
       <img src="images/logo-ibm.png" alt="logo image of imb" class="company-logo">
       <img src="images/logo-microsoft.png" alt="logo image of microsoft" class="company-logo">
@@ -97,7 +100,7 @@
       <img src="images/logo-vector-graphics.png" alt="logo image of vector-graphics" class="company-logo">
     </section>
 
-    <section class="download-sec">
+    <section class="page__download download-sec">
       <header>
         <h1>Clipboard for iOS and Mac OS</h1>
         <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.</p>
@@ -108,7 +111,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="page__footer">
       <img src="images/logo.svg" alt="website logo image" class="footer-logo">
       <div class="footer-links-container">
         <a href="#">FAQs</a>
